--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-router": "5.2.0",
     "react-router-dom": "5.2.0",
     "react-scripts": "3.4.1",
+    "react-select": "^2.0.0-beta.7",
     "reactstrap": "8.4.1"
   },
   "scripts": {
@@ -48,6 +49,7 @@
     "typescript": "3.9.5"
   },
   "devDependencies": {
+    "dotenv": "^8.2.0",
     "gulp": "4.0.2",
     "gulp-append-prepend": "1.0.8"
   }
